--- a/index.html
+++ b/index.html
@@ -6,12 +6,175 @@
   <meta charset="utf-8">
   <link href="style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <script src="jquery.js"></script>
   <script src="main.js"></script>
 </head>
 
 <body>
-  <h1>Matt Nelson</h1>
-  <p>Blah blah blah</p>
+  <header>
+    <h1>Matt Nelson</h1>
+    <h1>Creative Technologist</h1>
+  </header>
+
+  <section class="hero">
+    <div class="container">
+      <h2>Video, Sound, & Creative Code</h2>
+    </div>
+  </section>
+
+
+
+  <nav class="filters">
+    <div class="container">
+      <ul class="filters-list">
+        <li>
+          <a href="all.html" class="selected" data-filter=".photo">All</a>
+        </li>
+        <li>
+          <a href="sound.html" data-filter=".sound">Sound</a>
+        </li>
+        <li>
+          <a href="video.html" data-filter=".video">Video</a>
+        </li>
+        <li>
+          <a href="coding.html" data-filter=".coding">Coding</a>
+        </li>
+        <li>
+          <a href="teaching.html" data-filter=".teaching">Teaching</a>
+        </li>
+        <li>
+          <a href="my-work.html" data-filter=".my-work">My Work</a>
+        </li>
+        <li>
+          <a href="for-others.html" data-filter=".for-others">Work for Others</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
+  <section class="pictures">
+    <div class="container">
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/hydra-one.png">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/live-performance-one.png">
+      </div>
+
+      <div class="photo sound my-work" id="still">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/TO_001.jpg">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/celeste.png">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/automatonism-one.png">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/orca-pi.png">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/orca+ableton.png">
+      </div>
+
+      <div class="photo teaching">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/doc-class.jpg">
+      </div>
+
+      <div class="photo video for-others">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/heavy-water.jpg">
+      </div>
+
+      <div class="photo teaching">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/electronic-music-class.jpg">
+      </div>
+
+      <div class="photo sound for-others">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/many-miles.jpeg">
+      </div>
+
+      <div class="photo video for-others">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/p-canyon.png">
+      </div>
+
+      <div class="photo coding my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/pling-pong1.png">
+      </div>
+
+      <div class="photo teaching">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/sonic-pi-class.jpg">
+      </div>
+
+      <div class="photo video for-others">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/TDA-Still.jpg">
+      </div>
+
+
+      <div class="photo coding my-work">
+        <div class="overlay">
+          <h3></h3>
+        </div>
+        <img src="assets/tracer1.png">
+      </div>
+
+    </div>
+  </section>
+
+
+
 </body>
 
 </html>
