updated hella shit

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           <a href="video.html" data-filter=".video">Video</a>
         </li>
         <li>
-          <a href="coding.html" data-filter=".coding">Coding</a>
+          <a href="coding.html" data-filter=".web">Web</a>
         </li>
         <li>
           <a href="teaching.html" data-filter=".teaching">Teaching</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="my-work.html" data-filter=".my-work">My Work</a>
-        </li>
+        </li> -->
         <li>
           <a href="for-others.html" data-filter=".for-others">Work for Others</a>
         </li>
@@ -57,118 +57,121 @@
   <section class="pictures">
     <div class="container">
 
-      <div class="photo sound my-work">
+      <div class="photo sound video my-work">
         <div class="overlay">
-          <h3></h3>
+          <h4>video synthesis sketches</h4>
+          <p>video / sound</p>
         </div>
-        <img src="assets/hydra-one.png">
+        <img src="assets/unnamed.png">
       </div>
 
       <div class="photo sound my-work">
         <div class="overlay">
-          <h3></h3>
+          <h4>live coding performances</h4>
+          <p>sound</p>
         </div>
         <img src="assets/live-performance-one.png">
       </div>
 
       <div class="photo sound my-work" id="still">
         <div class="overlay">
-          <h3></h3>
+          <h4>still - cassette release</h4>
+          <!-- <h3></h3> -->
+          <p>sound</p>
         </div>
         <img src="assets/TO_001.jpg">
       </div>
 
-      <div class="photo sound my-work">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/celeste.png">
-      </div>
-
-      <div class="photo sound my-work">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/automatonism-one.png">
-      </div>
-
-      <div class="photo sound my-work">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/orca-pi.png">
-      </div>
-
-      <div class="photo sound my-work">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/orca+ableton.png">
-      </div>
-
-      <div class="photo teaching">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/doc-class.jpg">
-      </div>
-
       <div class="photo video for-others">
         <div class="overlay">
-          <h3></h3>
+          <h4>heavy water</h4>
+          <p>work for others / video</p>
         </div>
         <img src="assets/heavy-water.jpg">
       </div>
 
-      <div class="photo teaching">
+      <div class="photo sound my-work">
         <div class="overlay">
-          <h3></h3>
+          <h4>orca sketches</h4>
+          <p>sound</p>
         </div>
-        <img src="assets/electronic-music-class.jpg">
-      </div>
-
-      <div class="photo sound for-others">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/many-miles.jpeg">
-      </div>
-
-      <div class="photo video for-others">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/p-canyon.png">
-      </div>
-
-      <div class="photo coding my-work">
-        <div class="overlay">
-          <h3></h3>
-        </div>
-        <img src="assets/pling-pong1.png">
+        <img src="assets/celeste.png">
       </div>
 
       <div class="photo teaching">
         <div class="overlay">
-          <h3></h3>
+          <h4>creative coding with sonic pi</h4>
+          <p>teaching / sound</p>
         </div>
         <img src="assets/sonic-pi-class.jpg">
       </div>
 
+      <div class="photo web my-work">
+        <div class="overlay">
+          <h4>tracer</h4>
+          <p>web / sound</p>
+        </div>
+        <img src="assets/tracer1.png">
+      </div>
+
+      <div class="photo sound my-work">
+        <div class="overlay">
+          <h4>generative music in pure data</h4>
+          <p>sound</p>
+        </div>
+        <img src="assets/automatonism-one.png">
+      </div>
+
+      <div class="photo teaching">
+        <div class="overlay">
+          <h4>mobile filmmaking</h4>
+          <p>teaching / video</p>
+        </div>
+        <img src="assets/doc-class.jpg">
+      </div>
+
+      <div class="photo sound for-others">
+        <div class="overlay">
+          <h4>many miles before us</h4>
+          <p>work for others / sound</p>
+        </div>
+        <img src="assets/many-miles.jpeg">
+      </div>
+
+      <div class="photo web my-work">
+        <div class="overlay">
+          <h4>pling pong</h4>
+          <p>web / sound</p>
+        </div>
+        <img src="assets/pling-pong1.png">
+      </div>
+
+
       <div class="photo video for-others">
         <div class="overlay">
-          <h3></h3>
+          <h4>the way things can happen</h4>
+          <p>work for others / video</p>
         </div>
         <img src="assets/TDA-Still.jpg">
       </div>
 
-
-      <div class="photo coding my-work">
+      <div class="photo teaching">
         <div class="overlay">
-          <h3></h3>
+          <h4>intro to electronic music</h4>
+          <p>teaching / sound</p>
         </div>
-        <img src="assets/tracer1.png">
+        <img src="assets/electronic-music-class.jpg">
       </div>
+
+      <div class="photo video for-others">
+        <div class="overlay">
+          <h4>providence canyon</h4>
+          <p>work for others / video</p>
+        </div>
+        <img src="assets/p-canyon.png">
+      </div>
+
+
 
     </div>
   </section>
