added some links

--- a/index.html
+++ b/index.html
@@ -58,44 +58,51 @@
     <div class="container">
 
       <div class="photo sound video my-work">
+        <a href="https://vimeo.com/352145632" target="_blank">
         <div class="overlay">
-          <h4>video synthesis sketches</h4>
+          <h4>video synthesis with hydra</h4>
           <p>video / sound</p>
         </div>
         <img src="assets/unnamed.png">
+      </a>
       </div>
 
       <div class="photo sound my-work">
+        <a href="https://vimeo.com/348383861" target="_blank">
         <div class="overlay">
           <h4>live coding performances</h4>
           <p>sound</p>
         </div>
         <img src="assets/live-performance-one.png">
+      </a>
       </div>
 
       <div class="photo sound my-work" id="still">
         <div class="overlay">
-          <h4>still - cassette release</h4>
-          <!-- <h3></h3> -->
+          <h4>still</h4>
           <p>sound</p>
         </div>
         <img src="assets/TO_001.jpg">
       </div>
 
       <div class="photo video for-others">
+        <a href="https://www.erinjohnson.online/2018" target="_blank">
         <div class="overlay">
           <h4>heavy water</h4>
           <p>work for others / video</p>
         </div>
         <img src="assets/heavy-water.jpg">
+      </a>
       </div>
 
       <div class="photo sound my-work">
+        <a href="https://vimeo.com/336233278" target="_blank">
         <div class="overlay">
           <h4>orca sketches</h4>
           <p>sound</p>
         </div>
         <img src="assets/celeste.png">
+      </a>
       </div>
 
       <div class="photo teaching">
@@ -115,11 +122,13 @@
       </div>
 
       <div class="photo sound my-work">
+        <a href="https://vimeo.com/352986375" target="_blank">
         <div class="overlay">
           <h4>generative music in pure data</h4>
           <p>sound</p>
         </div>
         <img src="assets/automatonism-one.png">
+      </a>
       </div>
 
       <div class="photo teaching">
@@ -128,6 +137,14 @@
           <p>teaching / video</p>
         </div>
         <img src="assets/doc-class.jpg">
+      </div>
+
+      <div class="photo web sound">
+        <div class="overlay">
+          <h4>stretch</h4>
+          <p>web / sound</p>
+        </div>
+        <img src="assets/grain-player.png">
       </div>
 
       <div class="photo sound for-others">
