added more links

--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
 
       <div class="photo sound video my-work">
         <a href="https://vimeo.com/352145632" target="_blank">
-        <div class="overlay">
-          <h4>video synthesis with hydra</h4>
-          <p>video / sound</p>
-        </div>
-        <img src="assets/unnamed.png">
-      </a>
+          <div class="overlay">
+            <h4>video synthesis with hydra</h4>
+            <p>video / sound</p>
+          </div>
+          <img src="assets/unnamed.png">
+        </a>
       </div>
 
       <div class="photo sound my-work">
         <a href="https://vimeo.com/348383861" target="_blank">
-        <div class="overlay">
-          <h4>live coding performances</h4>
-          <p>sound</p>
-        </div>
-        <img src="assets/live-performance-one.png">
-      </a>
+          <div class="overlay">
+            <h4>live coding performances</h4>
+            <p>sound</p>
+          </div>
+          <img src="assets/live-performance-one.png">
+        </a>
       </div>
 
       <div class="photo sound my-work" id="still">
@@ -87,22 +87,22 @@
 
       <div class="photo video for-others">
         <a href="https://www.erinjohnson.online/2018" target="_blank">
-        <div class="overlay">
-          <h4>heavy water</h4>
-          <p>work for others / video</p>
-        </div>
-        <img src="assets/heavy-water.jpg">
-      </a>
+          <div class="overlay">
+            <h4>heavy water</h4>
+            <p>work for others / video</p>
+          </div>
+          <img src="assets/heavy-water.jpg">
+        </a>
       </div>
 
       <div class="photo sound my-work">
         <a href="https://vimeo.com/336233278" target="_blank">
-        <div class="overlay">
-          <h4>orca sketches</h4>
-          <p>sound</p>
-        </div>
-        <img src="assets/celeste.png">
-      </a>
+          <div class="overlay">
+            <h4>orca sketches</h4>
+            <p>sound</p>
+          </div>
+          <img src="assets/celeste.png">
+        </a>
       </div>
 
       <div class="photo teaching">
@@ -114,21 +114,23 @@
       </div>
 
       <div class="photo web my-work">
+        <a href="https://mattholamieux.itch.io/soundtracer" target="_blank">
         <div class="overlay">
           <h4>tracer</h4>
           <p>web / sound</p>
         </div>
         <img src="assets/tracer1.png">
+      </a>
       </div>
 
       <div class="photo sound my-work">
         <a href="https://vimeo.com/352986375" target="_blank">
-        <div class="overlay">
-          <h4>generative music in pure data</h4>
-          <p>sound</p>
-        </div>
-        <img src="assets/automatonism-one.png">
-      </a>
+          <div class="overlay">
+            <h4>generative music in pure data</h4>
+            <p>sound</p>
+          </div>
+          <img src="assets/automatonism-one.png">
+        </a>
       </div>
 
       <div class="photo teaching">
@@ -140,36 +142,43 @@
       </div>
 
       <div class="photo web sound">
+        <a href="https://mattholamieux.github.io/grain-player/" target="_blank">
         <div class="overlay">
           <h4>stretch</h4>
           <p>web / sound</p>
         </div>
         <img src="assets/grain-player.png">
+      </a>
       </div>
 
       <div class="photo sound for-others">
+        <a href="https://www.erinjohnson.online/2016" target="_blank">
         <div class="overlay">
           <h4>many miles before us</h4>
           <p>work for others / sound</p>
         </div>
         <img src="assets/many-miles.jpeg">
+      </a>
       </div>
 
       <div class="photo web my-work">
-        <div class="overlay">
-          <h4>pling pong</h4>
-          <p>web / sound</p>
-        </div>
-        <img src="assets/pling-pong1.png">
+        <a href="https://mattholamieux.itch.io/plingpong" target="_blank">
+          <div class="overlay">
+            <h4>pling pong</h4>
+            <p>web / sound</p>
+          </div>
+          <img src="assets/pling-pong1.png">
+        </a>
       </div>
 
-
       <div class="photo video for-others">
+        <a href="https://www.erinjohnson.online/2017" target="_blank">
         <div class="overlay">
           <h4>the way things can happen</h4>
           <p>work for others / video</p>
         </div>
         <img src="assets/TDA-Still.jpg">
+      </a>
       </div>
 
       <div class="photo teaching">
@@ -181,11 +190,13 @@
       </div>
 
       <div class="photo video for-others">
+        <a href="http://erinjohnson.online/providence-canyon" target="_blank">
         <div class="overlay">
           <h4>providence canyon</h4>
           <p>work for others / video</p>
         </div>
         <img src="assets/p-canyon.png">
+      </a>
       </div>
 
 
