changed order of works/links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Personal Page</title>
+  <title>Matt Nelson</title>
   <meta charset="utf-8">
   <link href="style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto+Mono&display=swap" rel="stylesheet">
@@ -43,9 +43,6 @@
         <li>
           <a href="teaching.html" data-filter=".teaching">Teaching</a>
         </li>
-        <!-- <li>
-          <a href="my-work.html" data-filter=".my-work">My Work</a>
-        </li> -->
         <li>
           <a href="for-others.html" data-filter=".for-others">Work for Others</a>
         </li>
@@ -61,7 +58,7 @@
         <a href="https://vimeo.com/352145632" target="_blank">
           <div class="overlay">
             <h4>video synthesis with hydra</h4>
-            <p>video / sound</p>
+            <p>#video #sound</p>
           </div>
           <img src="assets/unnamed.png">
         </a>
@@ -71,7 +68,7 @@
         <a href="https://vimeo.com/348383861" target="_blank">
           <div class="overlay">
             <h4>live coding performances</h4>
-            <p>sound</p>
+            <p>#sound</p>
           </div>
           <img src="assets/live-performance-one.png">
         </a>
@@ -79,27 +76,17 @@
 
       <div class="photo sound my-work" id="still">
         <div class="overlay">
-          <h4>still</h4>
-          <p>sound</p>
+          <h4>still - cassette release</h4>
+          <p>#sound</p>
         </div>
         <img src="assets/TO_001.jpg">
-      </div>
-
-      <div class="photo video for-others">
-        <a href="https://www.erinjohnson.online/2018" target="_blank">
-          <div class="overlay">
-            <h4>heavy water</h4>
-            <p>work for others / video</p>
-          </div>
-          <img src="assets/heavy-water.jpg">
-        </a>
       </div>
 
       <div class="photo sound my-work">
         <a href="https://vimeo.com/336233278" target="_blank">
           <div class="overlay">
             <h4>orca sketches</h4>
-            <p>sound</p>
+            <p>#sound</p>
           </div>
           <img src="assets/celeste.png">
         </a>
@@ -108,7 +95,7 @@
       <div class="photo teaching">
         <div class="overlay">
           <h4>creative coding with sonic pi</h4>
-          <p>teaching / sound</p>
+          <p>#teaching #sound</p>
         </div>
         <img src="assets/sonic-pi-class.jpg">
       </div>
@@ -117,7 +104,7 @@
         <a href="https://mattholamieux.itch.io/soundtracer" target="_blank">
         <div class="overlay">
           <h4>tracer</h4>
-          <p>web / sound</p>
+          <p>#web #sound</p>
         </div>
         <img src="assets/tracer1.png">
       </a>
@@ -127,7 +114,7 @@
         <a href="https://vimeo.com/352986375" target="_blank">
           <div class="overlay">
             <h4>generative music in pure data</h4>
-            <p>sound</p>
+            <p>#sound</p>
           </div>
           <img src="assets/automatonism-one.png">
         </a>
@@ -136,7 +123,7 @@
       <div class="photo teaching">
         <div class="overlay">
           <h4>mobile filmmaking</h4>
-          <p>teaching / video</p>
+          <p>#teaching #video</p>
         </div>
         <img src="assets/doc-class.jpg">
       </div>
@@ -145,19 +132,9 @@
         <a href="https://mattholamieux.github.io/grain-player/" target="_blank">
         <div class="overlay">
           <h4>stretch</h4>
-          <p>web / sound</p>
+          <p>#web #sound</p>
         </div>
         <img src="assets/grain-player.png">
-      </a>
-      </div>
-
-      <div class="photo sound for-others">
-        <a href="https://www.erinjohnson.online/2016" target="_blank">
-        <div class="overlay">
-          <h4>many miles before us</h4>
-          <p>work for others / sound</p>
-        </div>
-        <img src="assets/many-miles.jpeg">
       </a>
       </div>
 
@@ -165,9 +142,27 @@
         <a href="https://mattholamieux.itch.io/plingpong" target="_blank">
           <div class="overlay">
             <h4>pling pong</h4>
-            <p>web / sound</p>
+            <p>#web #sound</p>
           </div>
           <img src="assets/pling-pong1.png">
+        </a>
+      </div>
+
+      <div class="photo teaching">
+        <div class="overlay">
+          <h4>intro to electronic music</h4>
+          <p>#teaching #sound</p>
+        </div>
+        <img src="assets/electronic-music-class.jpg">
+      </div>
+
+      <div class="photo video for-others">
+        <a href="https://www.erinjohnson.online/2018" target="_blank">
+          <div class="overlay">
+            <h4>heavy water</h4>
+            <p>#work for others #video</p>
+          </div>
+          <img src="assets/heavy-water.jpg">
         </a>
       </div>
 
@@ -175,25 +170,27 @@
         <a href="https://www.erinjohnson.online/2017" target="_blank">
         <div class="overlay">
           <h4>the way things can happen</h4>
-          <p>work for others / video</p>
+          <p>#work for others #video</p>
         </div>
         <img src="assets/TDA-Still.jpg">
       </a>
       </div>
 
-      <div class="photo teaching">
+      <div class="photo sound for-others">
+        <a href="https://www.erinjohnson.online/2016" target="_blank">
         <div class="overlay">
-          <h4>intro to electronic music</h4>
-          <p>teaching / sound</p>
+          <h4>many miles before us</h4>
+          <p>#work for others #sound</p>
         </div>
-        <img src="assets/electronic-music-class.jpg">
+        <img src="assets/many-miles.jpeg">
+      </a>
       </div>
 
       <div class="photo video for-others">
         <a href="http://erinjohnson.online/providence-canyon" target="_blank">
         <div class="overlay">
           <h4>providence canyon</h4>
-          <p>work for others / video</p>
+          <p>#work for others #video</p>
         </div>
         <img src="assets/p-canyon.png">
       </a>
