changed font and updated 'editing and sound design' tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
   <script src="jquery.js"></script>
   <script src="main.js"></script>
 </head>
@@ -44,7 +45,7 @@
           <a href="teaching.html" data-filter=".teaching">Teaching</a>
         </li>
         <li>
-          <a href="for-others.html" data-filter=".for-others">Work for Others</a>
+          <a href="for-others.html" data-filter=".for-others">Editing & Sound Design</a>
         </li>
       </ul>
     </div>
@@ -55,7 +56,7 @@
     <div class="container">
 
       <div class="photo sound video my-work">
-        <a href="https://vimeo.com/352145632" target="_blank">
+        <a href="https://vimeo.com/showcase/6279851" target="_blank">
           <div class="overlay">
             <h4>video synthesis with hydra</h4>
             <p>#video #sound</p>
@@ -83,7 +84,7 @@
       </div>
 
       <div class="photo sound my-work">
-        <a href="https://vimeo.com/336233278" target="_blank">
+        <a href="https://vimeo.com/showcase/6276076" target="_blank">
           <div class="overlay">
             <h4>orca sketches</h4>
             <p>#sound</p>
@@ -102,16 +103,16 @@
 
       <div class="photo web my-work">
         <a href="https://mattholamieux.itch.io/soundtracer" target="_blank">
-        <div class="overlay">
-          <h4>tracer</h4>
-          <p>#web #sound</p>
-        </div>
-        <img src="assets/tracer1.png">
-      </a>
+          <div class="overlay">
+            <h4>tracer</h4>
+            <p>#web #sound</p>
+          </div>
+          <img src="assets/tracer1.png">
+        </a>
       </div>
 
       <div class="photo sound my-work">
-        <a href="https://vimeo.com/352986375" target="_blank">
+        <a href="https://vimeo.com/showcase/6280229" target="_blank">
           <div class="overlay">
             <h4>generative music in pure data</h4>
             <p>#sound</p>
@@ -130,12 +131,12 @@
 
       <div class="photo web sound">
         <a href="https://mattholamieux.github.io/grain-player/" target="_blank">
-        <div class="overlay">
-          <h4>stretch</h4>
-          <p>#web #sound</p>
-        </div>
-        <img src="assets/grain-player.png">
-      </a>
+          <div class="overlay">
+            <h4>stretch</h4>
+            <p>#web #sound</p>
+          </div>
+          <img src="assets/grain-player.png">
+        </a>
       </div>
 
       <div class="photo web my-work">
@@ -160,7 +161,7 @@
         <a href="https://www.erinjohnson.online/2018" target="_blank">
           <div class="overlay">
             <h4>heavy water</h4>
-            <p>#work for others #video</p>
+            <p>#editing & sound design  #video</p>
           </div>
           <img src="assets/heavy-water.jpg">
         </a>
@@ -168,32 +169,32 @@
 
       <div class="photo video for-others">
         <a href="https://www.erinjohnson.online/2017" target="_blank">
-        <div class="overlay">
-          <h4>the way things can happen</h4>
-          <p>#work for others #video</p>
-        </div>
-        <img src="assets/TDA-Still.jpg">
-      </a>
+          <div class="overlay">
+            <h4>the way things can happen</h4>
+            <p>#editing & sound design  #video</p>
+          </div>
+          <img src="assets/TDA-Still.jpg">
+        </a>
       </div>
 
       <div class="photo sound for-others">
         <a href="https://www.erinjohnson.online/2016" target="_blank">
-        <div class="overlay">
-          <h4>many miles before us</h4>
-          <p>#work for others #sound</p>
-        </div>
-        <img src="assets/many-miles.jpeg">
-      </a>
+          <div class="overlay">
+            <h4>many miles before us</h4>
+            <p>#editing & sound design  #sound</p>
+          </div>
+          <img src="assets/many-miles.jpeg">
+        </a>
       </div>
 
       <div class="photo video for-others">
         <a href="http://erinjohnson.online/providence-canyon" target="_blank">
-        <div class="overlay">
-          <h4>providence canyon</h4>
-          <p>#work for others #video</p>
-        </div>
-        <img src="assets/p-canyon.png">
-      </a>
+          <div class="overlay">
+            <h4>providence canyon</h4>
+            <p>#editing & sound design  #video</p>
+          </div>
+          <img src="assets/p-canyon.png">
+        </a>
       </div>
 
 
