added teaching links

--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
       </div>
 
       <div class="photo teaching">
+        <a href="https://www.mbnvideosound.com/teaching" target="_blank">
         <div class="overlay">
           <h4>creative coding with sonic pi</h4>
           <p>#teaching #sound</p>
         </div>
         <img src="assets/sonic-pi-class.jpg">
+      </a>
       </div>
 
       <div class="photo web my-work">
@@ -122,11 +124,13 @@
       </div>
 
       <div class="photo teaching">
+        <a href="https://www.mbnvideosound.com/teaching" target="_blank">
         <div class="overlay">
           <h4>mobile filmmaking</h4>
           <p>#teaching #video</p>
         </div>
         <img src="assets/doc-class.jpg">
+      </a>
       </div>
 
       <div class="photo web sound">
@@ -150,11 +154,13 @@
       </div>
 
       <div class="photo teaching">
+        <a href="https://www.mbnvideosound.com/teaching" target="_blank">
         <div class="overlay">
           <h4>intro to electronic music</h4>
           <p>#teaching #sound</p>
         </div>
         <img src="assets/electronic-music-class.jpg">
+      </a>
       </div>
 
       <div class="photo video for-others">
