added new projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1>Matt Nelson</h1>
-    <h1>Creative Technologist</h1>
+    <!-- <h1>Creative Technologist</h1> -->
   </header>
 
   <section class="hero">
@@ -65,6 +65,16 @@
         </a>
       </div>
 
+      <div class="photo web sound">
+        <a href="https://mattholamieux.github.io/delta_wave/" target="_blank">
+          <div class="overlay">
+            <h4>delta wave</h4>
+            <p>#web #sound</p>
+          </div>
+          <img src="assets/delta_wave title.gif">
+        </a>
+      </div>
+
       <div class="photo sound my-work">
         <a href="https://vimeo.com/348383861" target="_blank">
           <div class="overlay">
@@ -76,6 +86,7 @@
       </div>
 
       <div class="photo sound my-work" id="still">
+        <a href="https://tracedobjects.bandcamp.com/album/still" target="_blank">
         <div class="overlay">
           <h4>still - cassette release</h4>
           <p>#sound</p>
@@ -134,7 +145,7 @@
       </div>
 
       <div class="photo web sound">
-        <a href="https://mattholamieux.github.io/grain-player/" target="_blank">
+        <a href="https://mattholamieux.github.io/Granular-Sampler-v.1.01/" target="_blank">
           <div class="overlay">
             <h4>stretch</h4>
             <p>#web #sound</p>
