changed soundtracer link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
 
       <div class="photo web my-work">
-        <a href="https://mattholamieux.itch.io/soundtracer" target="_blank">
+        <a href="https://mattholamieux.github.io/soundTracer/" target="_blank">
           <div class="overlay">
             <h4>tracer</h4>
             <p>#web #sound</p>
