changed pling plong link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
 
       <div class="photo web my-work">
-        <a href="https://mattholamieux.itch.io/plingpong" target="_blank">
+        <a href="https://mattholamieux.github.io/plingPong/" target="_blank">
           <div class="overlay">
             <h4>pling pong</h4>
             <p>#web #sound</p>
